content/docs/0.16.x/reference/cli/commands/keptn_create_project.md
---
date: "2022-07-11T09:30:42+02:00"
title: "keptn create project"
slug: keptn_create_project
---
## keptn create project

Creates a new project

### Synopsis

Creates a new project with the provided name and Shipyard. 
The shipyard file describes the used stages. These stages are defined by name, as well as their task sequences.

By executing the *create project* command, Keptn initializes an internal Git repository that is used to maintain all project-related resources. 
To upstream this internal Git repository to a remote repository, the remote URL (*--git-remote-url*) is required
together with private key (*--git-private-key*) or access token (*--git-token*). The Git user (*--git-user*) can be specified if the repository allows it. 
For using proxy please specify proxy IP address together with port (*--git-proxy-url*) and
used scheme (*--git-proxy-scheme=*) to connect to proxy. Please be aware that authentication with public/private key and via proxy is 
supported only when using resource-service.

For more information about Shipyard, creating projects, or upstream repositories, please go to [Manage Keptn](https://v1.keptn.sh/docs/0.16.x/manage/)


```
keptn create project PROJECTNAME --shipyard=FILEPATH [flags]
```

### Examples

```
keptn create project PROJECTNAME --shipyard=FILEPATH
keptn create project PROJECTNAME --shipyard=FILEPATH --git-user=GIT_USER --git-remote-url=GIT_REMOTE_URL --git-token=GIT_TOKEN

or (only for resource-service)

keptn create project PROJECTNAME --shipyard=FILEPATH --git-user=GIT_USER --git-remote-url=GIT_REMOTE_URL --git-private-key=PRIVATE_KEY_PATH --git-private-key-pass=PRIVATE_KEY_PASSPHRASE

or (only for resource-service)

keptn create project PROJECTNAME --shipyard=FILEPATH --git-user=GIT_USER --git-remote-url=GIT_REMOTE_URL --git-token=GIT_TOKEN --git-proxy-url=PROXY_IP --git-proxy-scheme=SCHEME --git-proxy-user=PROXY_USER --git-proxy-password=PROXY_PASS --insecure-skip-tls

```

### Options

```
  -g, --git-pem-certificate string    The git PEM Certificate file
  -k, --git-private-key string        The SSH git private key of the git user
  -l, --git-private-key-pass string   The passphrase of git private key
  -e, --git-proxy-password string     The git proxy password
  -j, --git-proxy-scheme string       The git proxy scheme
  -p, --git-proxy-url string          The git proxy URL and port
  -w, --git-proxy-user string         The git proxy user
  -r, --git-remote-url string         The remote url of the upstream target
  -t, --git-token string              The git token of the git user
  -u, --git-user string               The git user of the upstream target
  -x, --insecure-skip-tls             Disable TLS verification to allow connections to servers using self signed certificates
  -s, --shipyard string               The path or URL to the shipyard file specifying the environment
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn create](../keptn_create/)	 - Creates a new project, service or secret

###### Auto generated by spf13/cobra on 11-Jul-2022
